# UTMOSv2

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  inference.py  pyproject.toml  quickstart.ipynb  train.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: lint_and_format.yml  mypy_check.yml  tests.yml
docs/: datasets.md  inference.md  reproduction.md  training.md
models/fusion_stage3/: fold0_s42_best_model.pth  fold1_s42_best_model.pth  fold2_s42_best_model.pth  fold3_s42_best_model.pth  fold4_s42_best_model.pth
tests/core_tests/: test_create.py  test_model.py
utmosv2/: __init__.py  _import.py
utmosv2/_core/: __init__.py  _download.py  create.py
utmosv2/_core/model/: __init__.py  _common.py  _models.py
utmosv2/_settings/: __init__.py  _config.py
utmosv2/config/: c_fusion_stage2.py  c_fusion_stage3.py  c_spec_only_stage1.py  c_spec_only_stage2.py  c_ssl_only_stage1.py  c_ssl_only_stage2.py  fusion_stage2.py  fusion_stage2_wo_bc.py  fusion_stage2_wo_bvcc.py  fusion_stage2_wo_sarulab.py  fusion_stage2_wo_somos.py  fusion_stage3.py  fusion_stage3_wo_bc.py  fusion_stage3_wo_bvcc.py  fusion_stage3_wo_sarulab.py  fusion_stage3_wo_somos.py  fusion_wo_stage1and2.py  fusion_wo_stage2.py  spec_only.py  spec_only_wo_bc.py  spec_only_wo_bvcc.py  spec_only_wo_sarulab.py  spec_only_wo_somos.py  ssl_only_stage1.py  ssl_only_stage1_wo_bc.py  ssl_only_stage1_wo_bvcc.py  ssl_only_stage1_wo_sarulab.py  ssl_only_stage1_wo_somos.py  ssl_only_stage2.py  ssl_only_stage2_wo_bc.py  ssl_only_stage2_wo_bvcc.py  ssl_only_stage2_wo_sarulab.py  ssl_only_stage2_wo_somos.py
utmosv2/dataset/: __init__.py  _base.py  _schema.py  _utils.py  multi_spec.py  ssl.py  ssl_multispec.py
utmosv2/loss/: __init__.py  _losses.py
utmosv2/model/: __init__.py  multi_spec.py  ssl.py  ssl_multispec.py
utmosv2/preprocess/: __init__.py  _preprocess.py  preprocess.py
utmosv2/runner/: __init__.py  _inference.py  _train.py
utmosv2/settings/: __init__.py
utmosv2/transform/: __init__.py  _xymasking.py  xymasking.py
utmosv2/utils/: __init__.py  _constants.py  _download.py  pure.py  task_dependents.py
utmosv2/utils/_pure/: __init__.py  _import.py  initializers.py  metrics.py  save.py  split.py
utmosv2/utils/_task_dependents/: __init__.py  initializers.py  log.py  metrics.py  save.py
