[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utmosv2"
description = "UTokyo-SaruLab MOS Prediction System"
readme = "README.md"
license = { file = "LICENSE" }
version = "0.1.0"
authors = [{ name = "Kaito Baba" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "numpy>=1.24.4",
    "pandas>=2.2.2",
    "torch>=2.3.1",
    "timm>=1.0.7",
    "librosa>=0.10.2",
    "tqdm>=4.66.4",
    "scikit-learn>=1.3.2",
    "transformers>=4.42.4",
    "wandb>=0.17.0",
    "python-dotenv>=1.0.1",
]
requires-python = ">=3.9"

[tool.setuptools]
py-modules = []
