[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utmosv2"
description = "UTokyo-SaruLab MOS Prediction System"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Kaito Baba" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "numpy>=1.24.4",
    "pandas>=2.2.2",
    "torch>=2.3.1",
    "timm>=1.0.7",
    "librosa>=0.10.2",
    "tqdm>=4.66.4",
    "transformers>=4.42.4",
]
requires-python = ">=3.9"
dynamic = ["version"]

[project.optional-dependencies]
checking = ["ruff", "mypy", "types-setuptools", "types-tqdm"]
train = ["scikit-learn>=1.3.2", "wandb>=0.17.0", "python-dotenv>=1.0.1"]

[tool.setuptools.dynamic]
version = { attr = "utmosv2.__version__" }

[tool.setuptools.packages.find]
include = ["utmosv2*"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["^build/"]
