[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utmosv2"
description = "UTokyo-SaruLab MOS Prediction System"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Kaito Baba" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "numpy>=1.24.4",
    "torch>=2.1.1",
    "timm>=1.0.7",
    "librosa>=0.10.2",
    "tqdm>=4.66.4",
    "transformers>=4.42.4",
    "typing-extensions"
]
requires-python = ">=3.9"
dynamic = ["version"]

[project.optional-dependencies]
check = ["ruff", "mypy", "types-setuptools", "types-tqdm"]
train = ["scikit-learn>=1.3.2", "wandb>=0.17.0", "python-dotenv>=1.0.1"]
optional = ["pandas>=2.2.2"]
test = ["pytest"]

[tool.setuptools.dynamic]
version = { attr = "utmosv2.__version__" }

[tool.setuptools.packages.find]
include = ["utmosv2*"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = ["^build/"]
